fixed the horizontal scrolling issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,13 +161,10 @@ input[type='number'] {
   font-weight: normal;
 }
 
-/* .cdk-overlay-container {
-  position: absolute;
-}
- */
+
 @media only screen and (max-width: 460px) {
   ::ng-deep .owl-stage-outer {
-    width: 450px;
+    width: 350px;
   }
 
   ::ng-deep .owl-dot.active span {
@@ -177,13 +174,14 @@ input[type='number'] {
   }
 
   ::ng-deep .owl-item.active {
-    max-width: 320px;
+    max-width: 250px;
   }
 }
 
+
 @media only screen and (max-width: 960px) {
   .owl-stage-outer {
-    width: 750px;
+    min-width: 290px;
   }
 
   ::ng-deep .owl-dot.active span {
